# django-enumeration

./: .flake8  .gitignore  .travis.yml  CHANGES.rst  README.rst  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: ci.yml
enumeration/: apps.py  const.py  formatter.py  manager.py  models.py  validators.py
enumeration/migrations/: 0001_initial.py  0002_auto_20180522_0639.py
enumeration/tests/: settings.py  test_consume_gap.py  test_format.py  test_format_validator.py  test_get_next.py  test_increment.py  test_misc.py
src/enumeration/: apps.py  manager.py  mixins.py  models.py  validators.py
src/enumeration/migrations/: 0002_alter_counter_id_alter_gap_id_alter_sequence_id.py
src/enumeration/tests/: apps.py  models.py  settings.py  test_format.py  test_get_next.py  test_get_number.py  test_increment.py  test_model_mixin.py
src/enumeration/tests/migrations/: 0001_initial.py
test/: settings.py  test_consume_gap.py
tests/: settings.py  test_format_validator.py  test_increment.py  test_misc.py
