[project]
name = "django-enumeration"
version = "1.0.0"
description = "Robust django enumeration sequences"
authors = [{ name = "Mārtiņš Šulcs", email = "shulcsm@gmail.com" }]
license = "MIT"
readme = "README.rst"
classifiers = [
  'Framework :: Django',
  'Intended Audience :: Developers',
  'Topic :: Software Development :: Libraries :: Python Modules',
]
requires-python = ">=3.8"
dependencies = ["Django>=4"]


[dependency-groups]
dev = [
  "pytest-django>=4.9.0",
  "pytest>=8.3.4",
  "psycopg2-binary>=2.9.10",
  "ruff>=0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enumeration"]
